Se añade interval a la antalla principal para actualizar sin refrescar

--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <body ng-app="datatablesAguaApp" ng-controller="aguaCtrl">
-    <table datatable  class="table table-striped table-bordered thead-dark" 
+    <table datatable  class="cell-border thead-dark table table-striped table-bordered " 
            dt-options="dtOptions"
            dt-columns="dtColumns">
     </table>
