--- a/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoClaveVapor/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 <body ng-app="datatablesVaporApp" ng-controller="vaporCtrl">
-    <table datatable class="table table-striped table-bordered thead-dark"
+    <table datatable class="cell-border thead-dark table table-striped table-bordered"
            dt-options="dtOptions"
            dt-columns="dtColumns">
     </table>
