--- a/WebResumen/Views/Home/Index.cshtml
+++ b/WebResumen/Views/Home/Index.cshtml
@@ -6,19 +6,127 @@
 
 
 
-
-
-
-
-
-
-
 <div class="text-center">
-    <h1 class="display-4">Autoclaves Baxter</h1>
+    <h1 class="">Autoclaves Baxter</h1>
     <p> <a href="">Ciclos de Esterilización Completada</a>.</p>
 </div>
-@*<table class="table">*@
-@*<thead>
+
+<!--<div class="container-fluid">
+    <table id="dtHorizontalVerticalExample" class="table table-striped table-bordered  " cellspacing="0" style="width:150%">
+        <thead>
+            <tr>
+
+                <th>ID </th>
+                <th>CICLO                  </th>
+                <th>ESTADO</th>
+                <th>NOMBRE</th>
+
+
+
+            </tr>
+        </thead>
+        <tbody class="tbody"></tbody>
+    </table>
+</div>
+
+
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">×</button>
+                <h4 class="modal-title" id="myModalLabel">Add Employee</h4>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="ID">ID</label>
+                        <input type="text" class="form-control" id="ID" placeholder="Id" disabled="disabled" />
+                    </div>
+                    <div class="form-group">
+                        <label for="CICLO">CICLO</label>
+                        <input type="text" class="form-control" id="CICLO" placeholder="Name" />
+                    </div>
+                    <div class="form-group">
+                        <label for="ESTADO">ESTADO</label>
+                        <input type="text" class="form-control" id="ESTADO" placeholder="Age" />
+                    </div>
+                    <div class="form-group">
+                        <label for="NOMBRE">NOMBRE</label>
+                        <input type="text" class="form-control" id="NOMBRE" placeholder="State" />
+                    </div>-->
+                    @*<div class="form-group">
+                        <label for="Country">Country</label>
+                        <input type="text" class="form-control" id="Country" placeholder="Country" />
+                    </div>*@
+                <!--</form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="btnAdd" onclick="return Create();">Añadir</button>
+                <button type="button" class="btn btn-primary" id="btnUpdate" style="display:none;" onclick="Edit();">Actualizar</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>-->
+
+
+
+
+
+
+
+<body ng-app="datatablesHomeApp" ng-controller="homeCtrl">
+
+
+    @*<table datatable class="cell-border thead-dark table table-striped table-bordered "
+           dt-options="dtOptions"
+           dt-columns="dtColumns">
+    </table>*@
+
+    <div class="spinner-border text-primary" role="status" ng-show="loading"></div> 
+<h1 ng-repeat="x in myWelcome"style="width: 13rem; text-align:left;display:inline-flex;flex-wrap: nowrap;">
+
+    <div class="card" >
+        <a href="{{x.nombre}}"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
+        <div class="card-body">
+            <span class="rounded-circle" ng-style="{{x.estado}} && { 'background' : 'green' } || !{{x.estado}} && { 'background' : 'red' }">&nbsp&nbsp&nbsp&nbsp&nbsp </span>
+
+            <a href="{{x.nombre}}">   <h5 class="card-title">{{x.nombre}}</h5></a>
+            <h5 class="card-title text-danger">Ciclo: {{x.ultimoCiclo}}</h5>
+
+
+
+        </div>
+    </div>
+
+
+
+
+
+
+    
+
+
+</h1>
+   
+
+
+</body> 
+    
+    
+    
+    
+    @*<div ng-app="myApp" ng-controller="myCtrl">
+
+    <p>Today's welcome message is:</p>
+
+    <h1>{{myWelcome}}</h1>
+
+</div>*@
+          @*<table class="table">*@
+          @*<thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Matricula)
@@ -50,42 +158,32 @@
             <th></th>
         </tr>
     </thead>*@
-@*<tbody>*@
-
-
-
-
-
-
-
-
-
-@foreach (var item in Model)
+          @*<tbody>*@
+          @*@foreach (var item in Model)
 {
 
-@*<tr>
+<tr>
      var actual = Regex.Replace(n.UltimoCiclo, "\\d+",
                    m => (int.Parse(m.Value) - 1).ToString(new string('0', m.Value.Length)));
 
-    <td>*@
-
-    foreach (var n in ViewBag.data as List<UltimoCiclo>)
-    {
-
-@*@Html.Raw(item.RutaSalida.Substring(33, 10))*@ //MEJOR FORMA DE HACER SUB
+    <td>
 
 
 
-<div class="card" style="width: 13rem; text-align:left;display:inline-block;">
+@Html.Raw(item.RutaSalida.Substring(33, 10)) //MEJOR FORMA DE HACER SUB
+
+
+
+<div class="card" style="width: 13rem; text-align:left;display:inline-flex;flex-wrap: nowrap;">
     <a href="/@Html.Raw(item.Nombre)"> <img class="card-img-top" src="~/img/Autoclave.png" alt="Card image cap"></a>
     <div class="card-body">
-        <a href="/@Html.Raw(item.Nombre)">   <h5 class="card-title">@Html.DisplayFor(modelItem => item.Matricula)</h5></a>
+        <a href="/@Html.Raw(item.Nombre)">   <h5 class="card-title">@Html.DisplayFor(modelItem => item.Nombre)</h5></a>
         <h5 class="card-title text-danger">Ciclo:  @Html.DisplayFor(modelItem => item.UltimoCiclo)</h5>
         <h5 class="card-title text-danger ">Estado:  @Html.DisplayFor(modelItem => item.Estado)</h5>
         <h5 class="card-title ">Sección:  @Html.DisplayFor(modelItem => item.Seccion)</h5>
 
 
-        @*<h5 class="card-title ">Sección:  @n.ciclo</h5>*@
+        <h5 class="card-title ">Sección:  @n.ciclo</h5>
         <h5 class="card-title ">Modelo: FOW5</h5>
         <p class="card-text"><small class="text-muted">Para más detalles haga click en el título o en la imagen</small></p>
     </div>
@@ -105,11 +203,11 @@
 
 
 
-    }
 
-@*</td>
 
-    </tr>*@
+</td>
+
+    </tr>
 }
-@*</tbody>*@
-@*</table>*@
+</tbody>
+</table>*@
