--- a/WebResumen/Views/MaestroAutoclaveSup/Create.cshtml
+++ b/WebResumen/Views/MaestroAutoclaveSup/Create.cshtml
@@ -1,18 +1,17 @@
 ﻿@model WebResumen.Models.MaestroAutoclave
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h1>Edit</h1>
+<h1>Create</h1>
 
 <h4>MaestroAutoclave</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Matricula" class="control-label"></label>
                 <input asp-for="Matricula" class="form-control" />
@@ -38,17 +37,11 @@
                 <input asp-for="Seccion" class="form-control" />
                 <span asp-validation-for="Seccion" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-            <label asp-for="Estado" class="control-label"></label>
-            <input asp-for="Estado" class="form-control" />
-            <span asp-validation-for="Estado" class="text-danger"></span>
-        </div>*@
-            <label asp-for="Estado" class="control-label"></label>
-            <select class="form-control" id="Estado" name="Estado">
-                <option>True</option>
-                <option>False</option>
-            </select>
-
+            <div class="form-group">
+                <label asp-for="Estado" class="control-label"></label>
+                <input asp-for="Estado" class="form-control" />
+                <span asp-validation-for="Estado" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="UltimoCiclo" class="control-label"></label>
                 <input asp-for="UltimoCiclo" class="form-control" />
@@ -65,7 +58,7 @@
                 <span asp-validation-for="RutaSalidaPdf" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
