--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -4,12 +4,29 @@
     ViewData["Title"] = "AutoClaves de Agua";
 }
 
+
+
 <body ng-app="datatablesAguaApp" ng-controller="aguaCtrl">
-    <table datatable  class="cell-border thead-dark table table-striped table-bordered " 
-           dt-options="dtOptions"
-           dt-columns="dtColumns">
-    </table>
-    </body>
+
+    @*Name :
+        <input ng-model="name" />
+        <br />
+        <br />
+
+
+
+        <input type="submit" value="Send" ng-click="name" />
+        <br />
+        <br />*@
+
+   
+
+
+        <table datatable class="cell-border thead-dark table table-striped table-bordered "
+               dt-options="dtOptions"
+               dt-columns="dtColumns">
+        </table>
+</body>
 
 
 
@@ -23,7 +40,7 @@
 
 
 
-    @*<div class="container-fluid">
+@*<div class="container-fluid">
         <table id="dtHorizontalVerticalExample" class="table table-striped table-bordered  " cellspacing="0" style="width:150%">
             <thead>
                 <tr>
