--- a/WebResumen/Views/AutoClaveD/Index.cshtml
+++ b/WebResumen/Views/AutoClaveD/Index.cshtml
@@ -20,7 +20,7 @@
         <form>
             Buscar por Nº Ciclo: @Html.TextBox("nCiclo")
             Buscar por Nº Programa: @Html.TextBox("nPrograma")
-            Buscar por Fecha:@Html.TextBox("fecha")
+            @*Buscar por Fecha:@Html.TextBox("fecha")*@
             @*Buscar por Fecha:  <input type="date" id="fecha" name="fecha" asp-format="{0:dd/MM/yy}" class="form-control">*@@*@Html.TextBox("fecha")*@
 
 
@@ -33,9 +33,9 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
+            @*<th>
                 @Html.DisplayNameFor(model => model.IdAutoclave)
-            </th>
+            </th>*@
             @*<th>
                     @Html.DisplayNameFor(model => model.IdSeccion)
                 </th>*@
@@ -244,9 +244,9 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>
+                @*<td>
                     @Html.DisplayFor(modelItem => item.IdAutoclave)
-                </td>
+                </td>*@
                 @*<td>
                         @Html.DisplayFor(modelItem => item.IdSeccion)
                     </td>
@@ -448,11 +448,13 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.FechaRegistro)
                     </td>*@
-                @*<td>
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                            <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                    </td>*@
+            <td>
+                @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
+                <a asp-action="Details" asp-route-id="@item.Id">Vista Previa</a> |
+                <a asp-action="Print" asp-route-id="@item.Id">Print</a> |
+                @*<a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+            </td>
             </tr>
         }
     </tbody>
