--- a/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
+++ b/WebResumen/Views/CiclosAutoclaveAgua/Index.cshtml
@@ -6,26 +6,58 @@
 
 
 
-<body ng-app="datatablesAguaApp" ng-controller="aguaCtrl">
 
-    @*Name :
-        <input ng-model="name" />
-        <br />
-        <br />
+<style>
+    .fullscreen-spinner {
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 100000;
+        background: #FFFFFF;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+</style>
+
+@*<div class="fullscreen-spinner" ng-show="loading">
+        <img src="~/img/spinner.gif" alt="spinner logo" />
+    </div>*@
 
 
 
-        <input type="submit" value="Send" ng-click="name" />
-        <br />
-        <br />*@
+
+<body ng-app="datatablesAguaApp" ng-controller="aguaCtrl as tagapp">
+
+    @*<input type="search" class="form-control"
+           ng-model="searchText"
+           ng-change="searchTable()" />
+
+    <input type="search" class="form-control"
+           ng-model="searchText"
+           ng-change="searchTable()" />*@
+
+    <table id="example" datatable class="cell-border thead-dark table table-striped table-bordered "
+           dt-options="dtOptions"
+           dt-columns="dtColumns"
+           dt-instance="dtInstance">
+        <tfoot>
+            <tr>
+                <th>id</th>
+                <th>N.Carro</th>
+                <th>N.Progresivo</th>
+            </tr>
+        </tfoot>
+    </table>
+
+
 
    
 
-
-        <table datatable class="cell-border thead-dark table table-striped table-bordered "
-               dt-options="dtOptions"
-               dt-columns="dtColumns">
-        </table>
 </body>
 
 
@@ -38,8 +70,28 @@
 
 
 
+@*<body ng-app="Myapp" ng-controller="Mycontroller">
+        <label>Buscar por Nombre <input ng-model="search.idAutoclave"></label><br>    <label>Buscar por Progama <input ng-model="search.programa"></label><br>
+
+        <table id="dtHorizontalVerticalExample" class="table table-striped table-bordered  " cellspacing="0" style="width:150%">
+            <thead>
+                <tr>
+                    <th>ID Autoclave</th>
+                    <th>PROGRAMA  </th>
+
+                </tr>
+            </thead>
+            <tr ng-repeat="x in searchid | filter:search">
+                <td>{{x.idAutoclave}}</td>
+                <td>{{x.programa}}</td>
+            </tr>
 
 
+
+        </table>
+
+
+    </body>*@
 @*<div class="container-fluid">
         <table id="dtHorizontalVerticalExample" class="table table-striped table-bordered  " cellspacing="0" style="width:150%">
             <thead>
