--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/examplec.css" />
+    <link rel="stylesheet" href="~/css/tablap.css" />
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Bootstrap core CSS -->
@@ -29,7 +30,8 @@
 
 
 </head>
-<body>
+<body >
+
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
@@ -125,6 +127,7 @@
     <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
+            
         </main>
     </div>
 
@@ -177,8 +180,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.18/pdfmake.min.js"></script>
+    <script src="https://cdn.datatables.net/colreorder/1.5.3/js/dataTables.colReorder.min.js"></script>
 
-  
+
+
 
 
 
@@ -191,6 +196,11 @@
     <script src="~/js/vaporApp.js" asp-append-version="true"></script>
     <script src="~/js/aguaApp.js" asp-append-version="true"></script>
     <script src="~/js/maestroApp.js" asp-append-version="true"></script>
+    <script src="~/js/pruebaApp.js" asp-append-version="true"></script>
+
+    <script src="~/AngularJSApp/AutoClaveA/Module.js"></script>
+    <script src="~/AngularJSApp/AutoClaveA/Service.js"></script>
+    <script src="~/AngularJSApp/AutoClaveA/Controller.js"></script>
 
 
 
