--- a/WebResumen/wwwroot/css/examplec.css
+++ b/WebResumen/wwwroot/css/examplec.css
@@ -1,5 +1,5 @@
 ﻿.dtHorizontalVerticalExampleWrapper {
-    max-width: 600px;
+    max-width: 500px;
     margin: 0 auto;
 }
 
@@ -8,7 +8,7 @@
 
 }
 
-table.dataTable thead .sorting:after,
+/*table.dataTable thead .sorting:after,
 table.dataTable thead .sorting:before,
 table.dataTable thead .sorting_asc:after,
 table.dataTable thead .sorting_asc:before,
@@ -19,4 +19,4 @@ table.dataTable thead .sorting_desc:before,
 table.dataTable thead .sorting_desc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:before {
     bottom: .5em;
-}
+}*/
