--- a/WebResumen/Views/AutoClaveL/Index.cshtml
+++ b/WebResumen/Views/AutoClaveL/Index.cshtml
@@ -442,11 +442,12 @@
                         @Html.DisplayFor(modelItem => item.FechaRegistro)
                     </td>*@
             <td>
-                <a asp-action="Details" asp-route-id="@item.Id">Vista Previa</a> |
+                @*<a asp-action="Details" asp-route-id="@item.Id">Vista Previa</a> |*@
+                <a asp-action="Preview" asp-route-id="@item.Id">Vista Previa</a> |
                 <a asp-action="Print" asp-route-id="@item.Id">Print</a> |
                 @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-             <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
+        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+            <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>*@
             </td>
             </tr>
         }
