--- a/WebResumen/Views/AutoClaveA/Index.cshtml
+++ b/WebResumen/Views/AutoClaveA/Index.cshtml
@@ -9,8 +9,19 @@
 
 <body ng-app="my-autoclaves" ng-controller="autoclave-controller">
 
+   
     <div class="spinner-border text-primary" role="status" ng-show="loading">
         <span class="sr-only">Loading...</span>
+    </div>
+
+    <div class="alert alert-warning alert-dismissable" role="alert" ng-if="send"
+         dismiss-on-timeout="1000">
+        <button type="button"  class="close" data-dismiss="alert">&times;</button>
+        El archivo ha sido enviado a la impresora!
+    </div>
+    <div class="alert alert-success alert-dismissable" role="alert" ng-if="received">
+        <button type="button" dismiss-on-timeout='1000' class="close" data-dismiss="alert">&times;</button>
+        El archivo ha sido impreso!
     </div>
 
     @*<p>The button has been clicked {{count}} times.</p>*@
@@ -69,10 +80,10 @@
 
                 <td style="width:200px;">
 
-                    <button href="#" type="button" data-toggle="modal" data-target="#exampleModal" value="submit" class="btn btn-info" ng-click="vistaPrevia(emp.id)">Ver</button> 
+                    <button href="#" type="button" data-toggle="modal" data-target="#exampleModal" value="submit" class="btn btn-info" ng-click="vistaPrevia(emp.id)">Ver</button>
                     <button href="#" type="button" value="submit" class="btn btn-success" ng-click="imprimir(emp.id)">Imprimir</button> |
 
-                  
+
                 </td>
             </tr>
         </tbody>
