--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -18,8 +18,12 @@
     <link href="~/lib/MDB/css/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="~/lib/MDB/css/style.css" rel="stylesheet">
+    <link href="~/css/toaster.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.2.2/css/buttons.dataTables.min.css">
+
+ 
+
 
 
 
@@ -30,7 +34,7 @@
 
 
 </head>
-<body >
+<body>
 
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -127,7 +131,7 @@
     <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
-            
+
         </main>
     </div>
 
@@ -162,7 +166,18 @@
 
     <script type="text/javascript" src="~/lib/MDB/js/addons/datatables.min.js"></script>
     <script type="text/javascript" src="~/lib/DataTables/datatables.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+
+    <script type="text/javascript" src="~/lib/AngularJS/angular.min.js"></script>  
+    <script type="text/javascript" src="~/lib/AngularJS/angular-animate.min.js"></script>
+    <script type="text/javascript" src="~/lib/AngularJS/angular-sanitize.min.js"></script>
+    <script type="text/javascript" src="~/lib/AngularJS/toaster.min.js"></script>
+
+
+
+
+
+  
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-datatables/0.6.4/angular-datatables.js"></script>
 
 
@@ -181,6 +196,12 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.18/pdfmake.min.js"></script>
     <script src="https://cdn.datatables.net/colreorder/1.5.3/js/dataTables.colReorder.min.js"></script>
+
+
+    <!-- Toaster -->
+
+
+
 
 
 
