Corección de errores

--- a/WebResumen/Views/Shared/_Layout.cshtml
+++ b/WebResumen/Views/Shared/_Layout.cshtml
@@ -166,17 +166,17 @@
 
     <script type="text/javascript" src="~/lib/MDB/js/addons/datatables.min.js"></script>
     <script type="text/javascript" src="~/lib/DataTables/datatables.min.js"></script>
-
-    <script type="text/javascript" src="~/lib/AngularJS/angular.min.js"></script>  
-    <script type="text/javascript" src="~/lib/AngularJS/angular-animate.min.js"></script>
-    <script type="text/javascript" src="~/lib/AngularJS/angular-sanitize.min.js"></script>
-    <script type="text/javascript" src="~/lib/AngularJS/toaster.min.js"></script>
-
-
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    @*<script type="text/javascript" src="~/lib/AngularJS/angular.min.js"></script>
+        <script type="text/javascript" src="~/lib/AngularJS/angular-animate.min.js"></script>
+        <script type="text/javascript" src="~/lib/AngularJS/angular-sanitize.min.js"></script>
+        <script type="text/javascript" src="~/lib/AngularJS/toaster.min.js"></script>*@
 
 
 
-  
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-datatables/0.6.4/angular-datatables.js"></script>
 
@@ -209,6 +209,7 @@
 
 
 
+
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/example.js" asp-append-version="true"></script>
     @*<script src="~/js/Agua.js" asp-append-version="true"></script>*@
@@ -219,9 +220,11 @@
     <script src="~/js/maestroApp.js" asp-append-version="true"></script>
     <script src="~/js/pruebaApp.js" asp-append-version="true"></script>
 
-    <script src="~/AngularJSApp/AutoClaveA/Module.js"></script>
-    <script src="~/AngularJSApp/AutoClaveA/Service.js"></script>
-    <script src="~/AngularJSApp/AutoClaveA/Controller.js"></script>
+    <script src="~/AngularJSApp/AutoClaveA/Module.js" asp-append-version="true"></script>
+    <script src="~/AngularJSApp/AutoClaveA/Controller.js" asp-append-version="true"></script>
+    <script src="~/AngularJSApp/AutoClaveA/Service.js" asp-append-version="true"></script>
+
+
 
 
 
